[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/visualizer/VisualizerTest.gd" type="Script" id=2]
[ext_resource path="res://menus/visualizer/Visualizer.tscn" type="PackedScene" id=3]

[node name="VisualizerTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visualizer" parent="." instance=ExtResource( 3 )]

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
margin_left = 36.0
margin_top = 22.0
margin_right = 381.0
margin_bottom = 195.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 335.0
margin_bottom = 173.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 325.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 69.0
margin_bottom = 19.0
text = "Cutoff Freq"

[node name="FreqHSLider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 221.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.5
max_value = 44100.0
value = 14700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FreqSpinbox" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 225.0
margin_right = 325.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 44100.0
value = 14700.0
align = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 325.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Min dB"

[node name="MindBHSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 49.0
margin_right = 247.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MindBSpinbox" type="SpinBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 251.0
margin_right = 325.0
margin_bottom = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 325.0
margin_bottom = 76.0

[node name="LoadSongButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 88.0
margin_bottom = 20.0
text = "Load Song..."

[node name="PlayButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 92.0
margin_right = 130.0
margin_bottom = 20.0
text = "Play"

[node name="PauseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 134.0
margin_right = 184.0
margin_bottom = 20.0
text = "Pause"

[node name="StopButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 188.0
margin_right = 228.0
margin_bottom = 20.0
text = "Stop"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 325.0
margin_bottom = 96.0

[node name="SeekSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 325.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 325.0
margin_bottom = 114.0
text = "press h to hide me"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 369.0
margin_bottom = 176.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.wav; Waveform Audio Format", "*.ogg ; Ogg" )
show_hidden_files = true
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/FreqSpinbox" to="Visualizer" method="set_freq_max"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/MindBHSlider" to="Visualizer" method="set_min_db"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/LoadSongButton" to="FileDialog" method="popup_centered_ratio"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/PauseButton" to="AudioStreamPlayer" method="set_stream_paused" binds= [ true ]]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/StopButton" to="AudioStreamPlayer" method="stop"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
